Updated comic source URL to fetch more items.